@@ -1,4 +1,5 @@
 * 2016.11.14 - added support to reuse preinstall scripts from other entries during package installation
+             - added support for CrystaX Android NDK
 
 * 2016.11.11 - fixed bug: no possible not to search for installed software
                but install from packages (useful for Caffe for Android via CK)
